nextJS authentication which stores the cookies of next-auth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/mongodb.js", "models/users.ts", "app/Providers.js", "app/api/auth/[...nextauth]/route.js"],
   "exclude": ["node_modules"]
 }
