--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-pay/button-react": "^3.0.10",
+    "@stripe/stripe-js": "^3.0.3",
     "@types/react-icons": "^3.0.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
@@ -19,6 +21,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
+    "react-stripe-checkout": "^2.6.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
